[package]
name = "ruxy"
version = "0.0.1-alpha"
edition = "2021"

[dependencies]
async-trait = "0.1.81"
bytes = { version = "1.6.1", features = ["serde"] }
http-body-util = "0.1.2"
hyper = { version = "1.4.1", features = ["full"] }
hyper-util = { version = "0.1.6", features = ["full"] }
lazy_static = "1.5.0"
log = "0.4.22"
log4rs = "1.3.0"
regex = "1.10.5"
rustls-pemfile = "2.1.2"
serde = { version = "1.0.204", features = ["derive"] }
tokio = { version = "1.38.0", features = ["full"] }
tokio-macros = "2.3.0"
tokio-rustls = "0.26.0"
toml = "0.8.14"
webpki-roots = "0.26.3"

[target.'cfg(not(target_os = "android"))'.dependencies]
jni = "0.21.1"
rustls-platform-verifier = "0.3.2"

