[package]
name = "ruxy"
version = "1.0.1"
edition = "2021"

[dependencies]
async-trait = "0.1.81"
bytes = { version = "1.6.1", features = ["serde"] }
http-body-util = "0.1.2"
hyper = { version = "1.4.1", features = ["full"] }
hyper-util = { version = "0.1.6", features = ["full"] }
lazy_static = "1.5.0"
chrono = "0.4.38"
log = "0.4.22"
regex = "1.10.5"
rustls-pemfile = "2.1.2"
tokio = { version = "1.38.0", features = ["full"] }
tokio-macros = "2.3.0"
tokio-rustls = "0.26.0"
toml = "0.8.14"
webpki-roots = "0.26.3"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
uuid = { version = "1.10.0", features = [ "v4", "fast-rng" ] }
rand = "0.8.5"
base64 = "0.22.1"
http = "1.1.0"
mlua = { version = "0.9.9", features = ["lua54", "vendored"] }

[target.'cfg(not(target_os = "android"))'.dependencies]
jni = "0.21.1"
rustls-platform-verifier = "0.3.2"

