[package]
name = "ruxy"
version = "1.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.89"
bytes = { version = "1.10.1", features = ["serde"] }
http-body-util = "0.1.3"
hyper = { version = "1.7.0", features = ["full"] }
hyper-util = { version = "0.1.17", features = ["full"] }
lazy_static = "1.5.0"
chrono = "0.4.42"
log = "0.4.28"
regex = "1.12.2"
rustls-pemfile = "2.2.0"
tokio = { version = "1.48.0", features = ["full"] }
tokio-macros = "2.6.0"
tokio-rustls = "0.26.4"
toml = "0.9.8"
webpki-roots = "1.0.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
uuid = { version = "1.18.1", features = [ "v4", "fast-rng" ] }
rand = "0.9.2"
base64 = "0.22.1"
http = "1.3.1"
mlua = { version = "0.11.4", features = ["lua54", "vendored"] }
rustls-webpki = "0.103"

[target.'cfg(not(target_os = "android"))'.dependencies]
jni = "0.21.1"
rustls-platform-verifier = "0.6.1"

